--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 				<br>
 				<a href="https://vk.com/id10396173">ВКонтакте</a>
 				<br>
-				<a href="https://www.linkedin.com/in/germandolnikov/">linkedin</a>
+				<a href="https://www.linkedin.com/in/germandolnikov/">linkedin</a><h3>(Я не менял ссылку в Linkedin, по скольку у меня нет там аккаунта)</h3>
 				<br>
-				<a href="https://github.com/German-D">github.com</a>
+				<a href="https://github.com/VladDZR/Vladislav-B">github.com</a>
 			</div>
 				<button type="button">Вперёд!!!</button>
 				<script type="text/javascript" src="js.js"></script>
