--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head> 
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Vladislav Borisov</title>
+
+<title>Vladislav Borisov</title>
 	<link rel="stylesheet" href="main.css">
-	<link rel="shortcut icon" href="internet.png" type="image/x-icon">
+
+<link rel="shortcut icon" href="internet.png" type="image/x-icon">
 </head>
 
 <body class="container" bgcolor="FFFACD">
-		<h1>Владислав Борисов 💪</h1>
+
+<h1>Владислав Борисов 💪</h1>
 
 		<div class="item">
 			<img class="photo" src="me.JPG" width="170" height="170" alt="фото">
 		</div>
 
-			<p>Один из семи миллиардов</p>
+			<p>Один из десяти миллиардов</p>
 
 			<h2>Обо мне</h2>
 
